--- a/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
+++ b/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
@@ -10,13 +10,13 @@
                                 <title type="mainTitle" xml:lang="Bo-Ltn">yi dags mo kha ’bar ma
                                         dbugs dbyung ba’i gtor ma’i cho ga</title>
                                 <title type="mainTitle" xml:lang="bo">ཡི་དགས་མོ་ཁ་འབར་མ་དབུགས་དབྱུང་བའི་གཏོར་མའི་ཆོ་ག</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha 'bar dbugs
+                                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha ’bar dbugs
                                         dbyung gtor chog</title>
                                 <title type="otherTitle" xml:lang="en">The Oblation Ritual which
                                         Comforts Female Ghosts whose Mouths are Aflame</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags mo kha 'bar ma
-                                        dbyugs dbyung ba'i gtor ma'i cho ga</title>
-                                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha 'bar dbyugs
+                                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags mo kha ’bar ma
+                                        dbyugs dbyung ba’i gtor ma’i cho ga</title>
+                                <title type="otherTitle" xml:lang="Bo-Ltn">yi dags kha ’bar dbyugs
                                         dbyung gtor cho ga</title>
                                 <author role="translatorMain" xml:id="UT22084-091-044-128">Translated by the Alexander Csoma de Kőrös Translation
                                         Group under the patronage and supervision of 84000:
@@ -38,7 +38,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 0.1.1 <date>2023</date>
+                <edition>v 1.0.0 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -48,7 +48,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="2">
+                                <availability status="1.a">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -64,7 +64,7 @@
                                 <note>An early mistake in the assigning of UT numbers within the
                                         84000 project means that these ids diverge slightly from the
                                         standard logic.</note>
-                                <date>2023-06-20</date>
+                                <date>2023-11-10</date>
                         </publicationStmt>
                         <sourceDesc>
                                 <bibl key="toh647" type="text">
@@ -170,6 +170,12 @@
                 </change>
                 <change who="#john" when="2023-11-10T15:48:53.884Z" type="text-version" status="0.1.1" xml:id="UT22084-091-044-1219">
                     <desc>Further edits prior to publication.</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-10T19:21:37.403Z" type="translation-status" status="1.a" xml:id="UT22084-091-044-1220">
+                    <desc>1.a</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-10T19:21:37.403Z" type="text-version" status="1.0.0" xml:id="UT22084-091-044-1221">
+                    <desc>First published version</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -283,8 +289,7 @@
                                                 nocturnal encounter with a gruesome female preta, or “hungry ghost,”
                                                 known by the epithet Flaming Mouth (Tib. <foreign xml:lang="Bo-Ltn">kha 
                                                         ’bar ma</foreign>),<note place="end" xml:id="UT22084-091-044-209">In the
-                                                                other text, <ref rend="pending" target="https://read.84000.co/translation/toh646.html">Toh 646</ref>/
-                                                                <ref rend="pending" target="https://read.84000.co/translation/toh1080.html">1080</ref>,
+                                                                other text, <ref rend="pending" target="https://read.84000.co/translation/toh646.html">Toh 646</ref>/<ref rend="pending" target="https://read.84000.co/translation/toh1080.html">1080</ref>,
                                                         the Tibetan rendering of the epithet is <foreign xml:lang="Bo-Ltn">kha nas me ’bar ba</foreign>,
                                                         and the preta is not specifically identified as female. Nevertheless (and disregarding 
                                                         this gender difference), both versions have a very similar 
@@ -624,7 +629,7 @@
                                                   parallel Chinese text (Taishō 1314), the Buddha
                                                   received this dhāraṇī from Guan shiyin pusa and
                                                   Shijian zizai deli rulai (Hun 2003, p. 420). In
-                                                  Toh 646/ 1080 he receives the dhāraṇī from the
+                                                  Toh 646/1080 he receives the dhāraṇī from the
                                                   bodhisattva Avalokiteśvara (Tib. <foreign xml:lang="Bo-Ltn">spyan ras gzigs</foreign>) and
                                                   the Thus-Gone One Vaśavartīguṇa (Tib. <foreign xml:lang="Bo-Ltn">de bzhin gshegs pa dbang sgyur
                                                   yon tan</foreign>).</note> With this dhāraṇī I
@@ -771,7 +776,7 @@
                                                 2006–9, vol. 91, pp. 475–82.</bibl>
                                         <bibl xml:id="UT22084-091-044-63">Choné Drakpa Zhédrup (co
                                                 ne drags pa bshad sgrub). <title xml:lang="Bo-Ltn">gsung ’bum</title> [<title xml:lang="en">Collected Works</title>], vol. 14, pp. 153–65.
-                                                Beijing: krung go'i bod rig pa dpe skrun khang,
+                                                Beijing: krung go’i bod rig pa dpe skrun khang,
                                                 2009. BDRC W1PD90129.</bibl>
                                         <bibl xml:id="UT22084-091-044-64">Denkarma (<title xml:lang="Bo-Ltn">pho brang stod thang ldan dkar
                                                   gyi chos kyi ’gyur ro cog gi dkar chag</title>).
@@ -1113,6 +1118,9 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">bhikṣuṇī</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dge slong ma</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">དགེ་སློང་མ།</term>
+                                                <note type="definition">
+                                                        <p>A fully ordained female practitioner observing 364 Vinaya vows.</p>
+                                                </note>
                                                 </gloss>
                     </item>
                                         <item>
@@ -1201,7 +1209,10 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">triratna</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">dkon mchog gsum</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">དཀོན་མཆོག་གསུམ།</term>
-                                                </gloss>
+                                                <note type="definition">
+                                                        <p>The Buddha, Dharma, and Saṅgha‍—the three objects of Buddhist refuge. In the Tibetan rendering, “the three rare and supreme ones.”</p>
+                                                </note>
+                                        </gloss>
                     </item>
                                         <item>
                         <gloss type="term" xml:id="UT22084-091-044-108">
@@ -1297,6 +1308,9 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">kapilavastu</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">yul ser skya</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">ཡུལ་སེར་སྐྱ།</term>
+                                                <note type="definition">
+                                                        <p>The Śākya capital, where Siddhārtha Gautama was raised.</p>
+                                                </note>
                                                 </gloss>
                     </item>
                                         <item>
@@ -1305,7 +1319,10 @@
                                                   <term xml:lang="Sa-Ltn" type="sourceUnspecified">nyagrodhārāma</term>
                                                   <term xml:lang="Bo-Ltn" type="attestedSource" n="1">nya gro dha’i kun dga’ ra ba</term>
                                                   <term xml:lang="bo" type="attestedSource" n="1">ཉ་གྲོ་དྷའི་ཀུན་དགའ་ར་བ།</term>
-                                                </gloss>
+                                                <note type="definition">
+                                                        <p>A grove of banyan trees (Skt. <foreign xml:lang="Sa-Ltn">nyagrodha</foreign>) near Kapilavastu where the Buddha sometimes took residence. It was a gift to the Buddhist community by King Śuddhodana, the father of the Buddha.</p>
+                                                </note>
+                                        </gloss>
                     </item>
                                 </list>
                         </div>
