--- a/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
+++ b/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
@@ -38,7 +38,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -176,6 +176,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-10T19:21:37.403Z" type="text-version" status="1.0.0" xml:id="UT22084-091-044-1221">
                     <desc>First published version</desc>
+                </change>
+                <change who="#martina-cotter" when="2023-11-10T19:27:58.497Z" type="text-version" status="1.0.1" xml:id="UT22084-091-044-1223">
+                    <desc>changed xml ID of one entry.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
@@ -406,7 +409,7 @@
                                         </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-044-20"/>
                                         <p tid="15">Fire and flames are a common—if secondary—feature of descriptions of pretas in 
-                                                the canonical literature both Chinese and Tibetan,<note place="end" xml:id="UT22084-091-043-18">See 
+                                                the canonical literature both Chinese and Tibetan,<note place="end" xml:id="UT22084-091-044-1222">See 
                                                         Rotman (2021), p. 46.</note> and in some Tibetan sources, the preta known by the
                                                 epithet “flaming mouth” is presented as a “queen of
                                                 pretas” (Tib. <foreign xml:lang="Bo-Ltn" type="term">yi dwags kyi rgyal mo</foreign>), though she is
