--- a/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
+++ b/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
@@ -8,7 +8,7 @@
                                         Preta Flaming Mouth</title>
                                 <title type="mainTitle" xml:lang="Bo-Ltn">yi dags kha nas me ’bar
                                         skyabs pa’i gzungs</title> 
-                                <title type="mainTitle" xml:lang="bo">དགས་ཁ་ནས་མེ་འབར་སྐྱབས་པའི་གཟུངས།</title>
+                                <title type="mainTitle" xml:lang="bo">ཡི་དགས་ཁ་ནས་མེ་འབར་སྐྱབས་པའི་གཟུངས།</title>
                                 <title type="longTitle" xml:lang="en">The Dhāraṇī “Giving Refuge to
                                         the Preta Flaming Mouth”</title>
                                 <title type="longTitle" xml:lang="bo">ཡི་དགས་ཁ་ནས་མེ་འབར་བ་ལ་སྐྱབས་མཛད་པ་ཞེས་བྱ་བའི་གཟུངས།</title>
@@ -36,7 +36,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.0 <date>2023</date>
+                <edition>v 1.0.1 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -176,6 +176,9 @@
                 </change>
                 <change who="#martina-cotter" when="2023-11-10T19:21:11.766Z" type="text-version" status="1.0.0" xml:id="UT22084-091-043-1221">
                     <desc>First published version</desc>
+                </change>
+                <change who="#john" when="2023-11-10T22:30:52.48Z" type="text-version" status="1.0.1" xml:id="UT22084-091-043-1222">
+                    <desc>Tibetan title on title page corrected.</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
