--- a/translations/kangyur/translations/034-030_toh42-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/translations/034-030_toh42-the_sutra_of_the_moon.xml
@@ -22,7 +22,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-034-030-157">John Canti</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
             <publicationStmt>
@@ -30,7 +30,7 @@
                     <name>84000: Translating the Words of the Buddha</name> is a global
                     non-profit initiative to translate all the Buddha’s words into modern languages,
                     and to make them available to everyone. </publisher>
-                <availability status="1.a">
+                <availability status="1">
                     <licence>
                         <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                         <p>This work is provided under the protection of a Creative Commons CC
@@ -154,6 +154,15 @@
                 </change>
                 <change who="#andre" when="2023-10-04T11:10:16.794Z" type="text-version" status="1.0.1" xml:id="UT22084-034-030-164">
                     <desc>glossary matching and definitions revised - activated in CG</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.2" xml:id="UT22084-034-030-165">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#sameer" when="2023-11-12T11:25:27.69Z" type="translation-status" status="1" xml:id="UT22084-034-030-166">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-11-12T11:25:27.69Z" type="text-version" status="1.0.3" xml:id="UT22084-034-030-167">
+                    <desc>Included in App v 3.8</desc>
                 </change>
             </revisionDesc>
         </fileDesc>
@@ -737,9 +746,8 @@
                         <gloss type="person" xml:id="UT22084-034-030-105">
                             <term type="translationMain">Ānandaśrī</term>
                             <term xml:lang="Sa-Ltn" type="attestedDictionary" status="verified">ānandaśrī</term>
-                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">a
-                                nanda shri</term>
-                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཨ་ནནད་ཤྲི།</term>
+                            <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">A nanda shrI</term>
+                            <term xml:lang="bo" type="attestedSource" n="1" status="verified">ཨཱ་ནནད་ཤྲཱི།</term>
                             <note type="definition">
                                 <p>A paṇḍita from Ceylon, who was active as a translator in Tibet in
                                     the early part of the fourteenth century.</p>
@@ -782,7 +790,7 @@
                             <term xml:lang="Bo-Ltn" type="attestedSource" n="1" status="verified">mnyan yod</term>
                             <term xml:lang="bo" type="attestedSource" n="1" status="verified">མཉན་ཡོད།</term>
                             <term xml:lang="Pi-Ltn" type="sourceUnspecified">sāvatthī</term>
-                            <note type="definition">
+                            <note type="definition" rend="override">
                                 <p>During the life of the Buddha, Śrāvastī was a major city in the
                                     kingdom of Kosala, in present-day Uttar Pradesh.</p>
                             </note>
