--- a/translations/kangyur/translations/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
+++ b/translations/kangyur/translations/068-003_toh269-the_sutra_dispelling_the_darkness_of_the_ten_directions.xml
@@ -33,7 +33,7 @@
                 <editor role="finalReviewer" xml:id="UT22084-068-003-236">Rory Lindsay</editor>
             </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -42,7 +42,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -161,6 +161,15 @@
                 </change>
                 <change who="#john" when="2023-10-12T14:00:23.956Z" type="text-version" status="1.0.1" xml:id="UT22084-068-003-240">
                     <desc>Shortened summary.</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.2" xml:id="UT22084-068-003-241">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#sameer" when="2023-11-12T11:39:30.656Z" type="translation-status" status="1" xml:id="UT22084-068-003-242">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-11-12T11:39:30.656Z" type="text-version" status="1.0.3" xml:id="UT22084-068-003-243">
+                    <desc>Included in App v 3.8</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
