--- a/translations/kangyur/translations/072-031_toh331-the_sutra_of_the_moon.xml
+++ b/translations/kangyur/translations/072-031_toh331-the_sutra_of_the_moon.xml
@@ -29,7 +29,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.3 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -38,7 +38,7 @@
                                         is a global non-profit initiative to translate all the
                                         Buddha’s words into modern languages, and to make them
                                         available to everyone. </publisher>
-                                <availability status="1.a">
+                                <availability status="1">
                                         <licence>
                                                 <graphic url="http://i.creativecommons.org/l/by-nc-nd/2.0/88x31.png"/>
                                                 <p>This work is provided under the protection of a
@@ -163,6 +163,15 @@
                 </change>
                 <change who="#andre" when="2023-10-04T11:20:02.914Z" type="text-version" status="1.0.1" xml:id="UT22084-072-031-158">
                     <desc>glossary matching and definitions revised - activated in CG</desc>
+                </change>
+                <change who="#celso" when="2023-10-13T11:48:10.305Z" type="text-version" status="1.0.2" xml:id="UT22084-072-031-159">
+                    <desc>reapplied capital letters in Wylie and covert to TibUni-glossary</desc>
+                </change>
+                <change who="#sameer" when="2023-11-12T11:43:58.798Z" type="translation-status" status="1" xml:id="UT22084-072-031-160">
+                    <desc>1</desc>
+                </change>
+                <change who="#sameer" when="2023-11-12T11:43:58.798Z" type="text-version" status="1.0.3" xml:id="UT22084-072-031-161">
+                    <desc>Included in App v 3.8</desc>
                 </change>
                         </revisionDesc>
                 </fileDesc>
