--- a/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
+++ b/translations/kangyur/placeholders/062-019_toh219-the_sutra_on_putting_an_end_to_karmic_obscurations.xml
@@ -4,22 +4,23 @@
     <teiHeader>
         <fileDesc>
             <titleStmt>
-                <title type="mainTitle" xml:lang="Bo-Ltn">las sgrib rgyun gcod kyi mdo/</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">karmāvaraṇapratipraśrabdhisūtra</title>
                 <title type="mainTitle" xml:lang="en">The Sūtra on Putting an End to Karmic Obscurations</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Karmāvaraṇapratipraśrabdhisūtra</title>
+                <title type="mainTitle" xml:lang="Bo-Ltn">las sgrib rgyun gcod kyi mdo/</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryakarmāvaraṇa­pratipraśrabdhi­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa las kyi sgrib pa rgyun gcod pa zhes bya ba theg pa chen po'i mdo</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryakarmāvaraṇa­pratipraśrabdhi­nāmamahāyānasūtra</title>
-                <author role="translatorMain" ref="contributors.xml#team-22"/>
-                <author role="translatorEng" ref="contributors.xml#person-142">Peter Alan Roberts</author>
-                <author role="translatorEng" ref="contributors.xml#person-143">Emily Bower</author>
-                <consultant role="projectManager" ref="contributors.xml#person-143">Emily Bower</consultant>
+                <author role="translatorMain" xml:id="UT22084-062-019-1">Peter Alan Roberts and team</author>
+                <author role="translatorEng" xml:id="UT22084-062-019-2">Peter Alan Roberts</author>
+                <author role="translatorEng" xml:id="UT22084-062-019-3">Emily Bower</author>
+                <consultant role="projectManager" xml:id="UT22084-062-019-4">Emily Bower</consultant>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.4 <date>2019</date>
+                <edition>v 0.0.7 <date>2023</date>
                 </edition>
             </editionStmt>
 
-            <publicationStmt status="2.g">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-062-019"/>
                 <date/>
             </publicationStmt>
@@ -34,16 +35,45 @@
                     <idno source-id="O1JC114941JC11860" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2023-05-31T14:29:38.569Z" user="admin">31/05/2023 14:29:38</note>
-            
-<note type="updated" update="text-version" value="v 0.0.1" date-time="2019-12-20T12:56:48.575Z" user="admin">Automated version increment</note>
-<note type="updated" update="translation-status" value="2.h" date-time="2020-03-25T08:33:28.637Z" user="line-tofte">2.h</note>
-<note type="updated" update="translation-status" value="3" date-time="2020-03-25T08:34:33.407Z" user="line-tofte">3</note>
-    <note type="updated" update="translation-status" value="2.h" date-time="2020-04-21T14:14:53.058Z" user="line-tofte">2.h</note>
-    <note type="updated" update="text-version" value="0.0.2" date-time="2021-02-04T16:25:03.608Z" user="line-tofte">Auto (update-contributors)</note>
-    <note type="updated" update="text-version" value="0.0.3" date-time="2021-02-04T16:25:16.599Z" user="line-tofte">Auto (update-contributors)</note>    <note type="updated" update="translation-status" value="2.g" date-time="2023-05-31T14:29:34.075Z" user="line-tofte">2.g</note>    <note type="updated" update="text-version" value="0.0.4" date-time="2023-05-31T14:29:34.075Z" user="line-tofte">Auto (update-publication-status)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#admin" when="2019-12-20T12:56:48.575Z" type="text-version" status="v 0.0.1" xml:id="UT22084-062-019-5">
+                    <desc>Automated version increment</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-25T08:33:28.637Z" type="translation-status" status="2.h" xml:id="UT22084-062-019-6">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2020-03-25T08:34:33.407Z" type="translation-status" status="3" xml:id="UT22084-062-019-7">
+                    <desc>3</desc>
+                </change>
+                <change who="#line-tofte" when="2020-04-21T14:14:53.058Z" type="translation-status" status="2.h" xml:id="UT22084-062-019-8">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-04T16:25:03.608Z" type="text-version" status="0.0.2" xml:id="UT22084-062-019-9">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2021-02-04T16:25:16.599Z" type="text-version" status="0.0.3" xml:id="UT22084-062-019-10">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-31T14:29:34.075Z" type="translation-status" status="2.g" xml:id="UT22084-062-019-11">
+                    <desc>2.g</desc>
+                </change>
+                <change who="#line-tofte" when="2023-05-31T14:29:34.075Z" type="text-version" status="0.0.4" xml:id="UT22084-062-019-12">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.5" xml:id="UT22084-062-019-13">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-09-04T09:07:46.313Z" type="text-version" status="0.0.6" xml:id="UT22084-062-019-14">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T12:02:39.696Z" type="translation-status" status="2.f" xml:id="UT22084-062-019-15">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T12:02:39.696Z" type="text-version" status="0.0.7" xml:id="UT22084-062-019-16">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
