--- a/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
+++ b/translations/kangyur/placeholders/058-005_toh156-the_sutra_of_the_questions_of_the_naga_king_anavatapta.xml
@@ -5,24 +5,25 @@
         <fileDesc>
             <titleStmt>
                 <title type="mainTitle" xml:lang="en">The Sūtra of the Questions of the Nāga King Anavatapta</title>
-                <title type="mainTitle" xml:lang="Sa-Ltn">anavataptanāgarājaparipṛcchāsūtra</title>
+                <title type="mainTitle" xml:lang="Sa-Ltn">Anavataptanāgarājaparipṛcchāsūtra</title>
                 <title type="mainTitle" xml:lang="Bo-Ltn">klu'i rgyal po ma dros pas zhus pa'i mdo/</title>
-                <title type="otherTitle" xml:lang="Sa-Ltn">āryānavataptanāgarāja­paripṛcchā­nāmamahāyānasūtra</title>
+                <title type="otherTitle" xml:lang="Sa-Ltn">Āryānavataptanāgarāja­paripṛcchā­nāmamahāyānasūtra</title>
                 <title type="otherTitle" xml:lang="zh">《阿耨達龍王所問經》 (大正藏：佛說弘道廣顯三昧經)</title>
                 <title type="otherTitle" xml:lang="Bo-Ltn">'phags pa klu'i rgyal po ma dros pas zhus pa zhes bya ba theg pa chen po'i mdo</title>
-                <author role="translatorMain" ref="contributors.xml#team-9"/>
-                <author role="translatorEng" ref="contributors.xml#person-60">Benjamin Ewing</author>
-                <editor role="reviser" ref="contributors.xml#person-50">Dr. Andreas Doctor</editor>
-                <consultant role="projectManager" ref="contributors.xml#person-50">Dr. Andreas Doctor</consultant>
-                <consultant role="dharmaMaster" ref="contributors.xml#person-40">Chokyi Nyima Rinpoche</consultant>
-                <editor role="reviser" ref="contributors.xml#person-59">Benjamin Collet-Cassart</editor>
-                <sponsor ref="sponsors.xml#sponsor-204">Tian Pujun</sponsor>
+                <author role="translatorMain" xml:id="UT22084-058-005-1"/>
+                <author role="translatorEng" xml:id="UT22084-058-005-2">Benjamin Ewing</author>
+                <editor role="reviser" xml:id="UT22084-058-005-3">Dr. Andreas Doctor</editor>
+                <consultant role="projectManager" xml:id="UT22084-058-005-4">Dr. Andreas Doctor</consultant>
+                <consultant role="dharmaMaster" xml:id="UT22084-058-005-5">Chokyi Nyima Rinpoche</consultant>
+                <editor role="reviser" xml:id="UT22084-058-005-6">Benjamin Collet-Cassart</editor>
+                <sponsor xml:id="UT22084-058-005-7">Tian Pujun</sponsor>
             </titleStmt>
     <editionStmt>
-                <edition>v 0.0.6 <date>2020</date>
+                <edition>v 0.0.8 <date>2023</date>
                 </edition>
             </editionStmt>
-            <publicationStmt status="2.h">
+            <publicationStmt>
+                <availability status="2.f"/>
                 <idno xml:id="UT22084-058-005"/>
                 <date/>
             </publicationStmt>
@@ -30,10 +31,10 @@
                 <bibl key="toh156" type="text">
                     <ref>Toh 156</ref>
                     <biblScope>vol.58, ff. 206r-253v(pp.411-506)</biblScope>
-                    <author role="translatorTib">t. jinamitra</author>
-                    <author role="translatorTib">danasila</author>
-                    <author role="translatorTib">ye shes sde</author>
-                    <author role="translatorTib">dgon gling rma</author>
+                    <author role="translatorTib" xml:id="UT22084-058-005-16">t. jinamitra</author>
+                    <author role="translatorTib" xml:id="UT22084-058-005-17">danasila</author>
+                    <author role="translatorTib" xml:id="UT22084-058-005-18">ye shes sde</author>
+                    <author role="translatorTib" xml:id="UT22084-058-005-19">dgon gling rma</author>
                     <location work="UT4CZ5369" count-pages="96">
                         <volume number="58" start-page="411" end-page="506"/>
                     </location>
@@ -41,16 +42,39 @@
                     <idno source-id="O1JC114941JC11753" work="W22084"/>
                 </bibl>
             </sourceDesc>
-            <notesStmt>
-                <note type="lastUpdated" date-time="2022-07-26T06:09:37.164Z" user="admin">26/07/2022 06:09:37</note>
-                <note type="updated" update="text-version" value="0.0.1" date-time="2020-04-21T13:16:51.146Z" user="line-tofte">0.0.1</note>
-                <note type="updated" update="text-version" value="0.0.2" date-time="2020-08-19T10:39:20.765Z" user="admin">0.0.2</note>
-                <note type="updated" update="translation-status" value="2.h" date-time="2020-08-26T06:46:15.558Z" user="line-tofte">2.h</note>
-                <note type="updated" update="text-version" value="0.0.3" date-time="2020-08-26T06:46:15.558Z" user="line-tofte">Auto (update-publication-status)</note>
-                <note type="updated" update="text-version" value="0.0.4" date-time="2020-08-26T06:47:19.015Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.5" date-time="2020-08-26T06:47:31.121Z" user="line-tofte">Auto (update-contributors)</note>
-                <note type="updated" update="text-version" value="0.0.6" date-time="2022-07-26T06:09:29.446Z" user="cabie-sim">Auto (update-titles)</note>
-            </notesStmt>
+            <notesStmt/>
+            <revisionDesc>
+                <change who="#line-tofte" when="2020-04-21T13:16:51.146Z" type="text-version" status="0.0.1" xml:id="UT22084-058-005-8">
+                    <desc>0.0.1</desc>
+                </change>
+                <change who="#admin" when="2020-08-19T10:39:20.765Z" type="text-version" status="0.0.2" xml:id="UT22084-058-005-9">
+                    <desc>0.0.2</desc>
+                </change>
+                <change who="#line-tofte" when="2020-08-26T06:46:15.558Z" type="translation-status" status="2.h" xml:id="UT22084-058-005-10">
+                    <desc>2.h</desc>
+                </change>
+                <change who="#line-tofte" when="2020-08-26T06:46:15.558Z" type="text-version" status="0.0.3" xml:id="UT22084-058-005-11">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-08-26T06:47:19.015Z" type="text-version" status="0.0.4" xml:id="UT22084-058-005-12">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2020-08-26T06:47:31.121Z" type="text-version" status="0.0.5" xml:id="UT22084-058-005-13">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#cabie-sim" when="2022-07-26T06:09:29.446Z" type="text-version" status="0.0.6" xml:id="UT22084-058-005-14">
+                    <desc>Auto (update-titles)</desc>
+                </change>
+                <change who="#admin" when="2023-07-30T22:39:48.323Z" type="text-version" status="0.0.7" xml:id="UT22084-058-005-15">
+                    <desc>TEI migrated to 2.19.0</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T12:18:13.707Z" type="translation-status" status="2.f" xml:id="UT22084-058-005-20">
+                    <desc>2.f</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T12:18:13.707Z" type="text-version" status="0.0.8" xml:id="UT22084-058-005-21">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+            </revisionDesc>
         </fileDesc>
     </teiHeader>
     <text>
