--- a/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
+++ b/translations/kangyur/placeholders/062-005_toh205-the_sutra_on_the_woman_in_the_city_who_hangs_up_washing.xml
@@ -16,14 +16,15 @@
                 <consultant role="projectManager" xml:id="UT22084-062-005-5">Ani Kunga Chodron</consultant>
                 <editor role="projectEditor" xml:id="UT22084-062-005-6">George FitzHerbert</editor>
                 <editor role="projectEditor" xml:id="UT22084-062-005-20">David Fiordalis</editor>
+                <editor role="copyEditor" xml:id="UT22084-062-005-33">Dawn Collins</editor>
             </titleStmt>
             <editionStmt>
-                <edition>v 0.0.8 <date>2023</date>
+                <edition>v 0.0.10 <date>2023</date>
                 </edition>
             </editionStmt>
 
             <publicationStmt>
-                <availability status="2.e"/>
+                <availability status="2.d"/>
                 <idno xml:id="UT22084-062-005"/>
                 <date/>
             </publicationStmt>
@@ -74,6 +75,15 @@
                     <desc>2.e</desc>
                 </change>
                 <change who="#line-tofte" when="2023-10-25T14:45:12.621Z" type="text-version" status="0.0.8" xml:id="UT22084-062-005-25">
+                    <desc>Auto (update-publication-status)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-10-25T14:45:52.608Z" type="text-version" status="0.0.9" xml:id="UT22084-062-005-34">
+                    <desc>Auto (update-contributors)</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T14:29:26.388Z" type="translation-status" status="2.d" xml:id="UT22084-062-005-35">
+                    <desc>2.d</desc>
+                </change>
+                <change who="#line-tofte" when="2023-11-13T14:29:26.388Z" type="text-version" status="0.0.10" xml:id="UT22084-062-005-36">
                     <desc>Auto (update-publication-status)</desc>
                 </change>
             </revisionDesc>
