--- a/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
+++ b/translations/kangyur/translations/091-043_toh646,1080-the_dharani_of_refuge_for_the_preta_flaming_mouth.xml
@@ -36,7 +36,7 @@
                                         Canti</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
                         <publicationStmt>
@@ -180,6 +180,9 @@
                 <change who="#john" when="2023-11-10T22:30:52.48Z" type="text-version" status="1.0.1" xml:id="UT22084-091-043-1222">
                     <desc>Tibetan title on title page corrected.</desc>
                 </change>
+                <change who="#john" when="2023-11-13T15:06:49.451Z" type="text-version" status="1.0.2" xml:id="UT22084-091-043-1223">
+                    <desc>Added notes and material to intro.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -267,7 +270,7 @@
                                                   <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                                                 </note> The other text is <title xml:lang="en">The
                                                   Bali Ritual to Relieve the Female Preta Flaming
-                                                  Mouth </title>(<ref rend="pending" target="https://read.84000.co/translation/toh647.html">Toh 647</ref>/<ref rend="pending" target="https://read.84000.co/translation/toh1079.html">1079</ref>). These texts have had a significant
+                                                  Mouth </title>(<ref target="https://read.84000.co/translation/toh647.html">Toh 647</ref>/<ref target="https://read.84000.co/translation/toh1079.html">1079</ref>). These texts have had a significant
                                                 legacy for the ritual traditions of Buddhist Asia,
                                                 serving as foundations for the traditions of giving
                                                 compassionate food offerings to alleviate the
@@ -350,7 +353,15 @@
                                         <p tid="15"> The proper rendering of the Sanskrit name of
                                                 this preta—given here as “Flaming Mouth” (<foreign xml:lang="Bo-Ltn">kha nas me </foreign>
                         <title xml:lang="Bo-Ltn">’</title>
-                        <foreign xml:lang="Bo-Ltn">bar ba</foreign>)—remains
+                        <foreign xml:lang="Bo-Ltn">bar ba</foreign>)<note place="end" xml:id="UT22084-091-043-209">In the
+                                                        other text, <ref target="https://read.84000.co/translation/toh646.html">Toh 647</ref>/<ref target="https://read.84000.co/translation/toh1080.html">1079</ref>,
+                                                        the Tibetan rendering of the epithet is <foreign xml:lang="Bo-Ltn">kha ’bar ma</foreign>,
+                                                        and the preta is specifically identified as female. Nevertheless (and disregarding 
+                                                        this gender difference), both versions have a very similar 
+                                                        meaning, and given the presumed common source of the narrative 
+                                                        and the likelihood that the same original Sanskrit (or possibly Chinese) epithet 
+                                                        could easily have been translated into Tibetan in different ways, we have used 
+                                                        “Flaming Mouth,” to render both.</note>—remains
                                                 unresolved. Although no Sanskrit title for the text is given
                                                 in the Narthang, Yongle, or Degé recensions, Sanskrit titles
                                                 provided in the Lithang, Kangxi, and Choné recensions 
@@ -398,7 +409,11 @@
                                                 Buddhism, its legacies are found in a variety of
                                                 rites that involve making torma (Skt. <foreign xml:lang="Sa-Ltn" type="term">bali</foreign>, Tib.
                                                   <foreign xml:lang="Bo-Ltn" type="term">gtor
-                                                  ma</foreign>) offerings to the pretas, in which
+                                                          ma</foreign>)<note place="end" xml:id="UT22084-091-043-219">As well as rituals in which the offerings 
+                                                          consist of food, the genre includes rituals in which the offering is of water alone 
+                                                          (Tib. <foreign xml:lang="Bo-Ltn">chu gtor</foreign>). These may derive from the other version
+                                                          of the text, in which this additional way of making offerings is mentioned
+                                                          (see <ptr target="#UT22084-091-044-52"/> in Toh 647).</note> offerings to the pretas, in which
                                                 the dhāraṇī given in the sūtra is employed. Many such rites involve the
                                                 invocation or visualization of Avalokiteśvara, just as
                                                 some of the related practices in Chinese tradition may 
