--- a/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
+++ b/translations/kangyur/translations/091-044_toh647,1079-the_bali_ritual_to_relieve_the_female_preta_burning_mouth.xml
@@ -38,7 +38,7 @@
                                         Lindsay</editor>
                         </titleStmt>
                         <editionStmt>
-                <edition>v 1.0.1 <date>2023</date>
+                <edition>v 1.0.2 <date>2023</date>
                 </edition>
             </editionStmt>
 
@@ -180,6 +180,9 @@
                 <change who="#martina-cotter" when="2023-11-10T19:27:58.497Z" type="text-version" status="1.0.1" xml:id="UT22084-091-044-1223">
                     <desc>changed xml ID of one entry.</desc>
                 </change>
+                <change who="#john" when="2023-11-13T15:07:50.8Z" type="text-version" status="1.0.2" xml:id="UT22084-091-044-1224">
+                    <desc>Added notes and material to intro.</desc>
+                </change>
                         </revisionDesc>
                 </fileDesc>
         </teiHeader>
@@ -274,8 +277,8 @@
                                                   <!--REPLICATE PREVIOUS NOTE IF THERE ARE THREE OR MORE TOH VERSIONS-->
                                                 </note> The other text is <title xml:lang="en">The
                                                   Dhāraṇī of Refuge for the Preta Flaming
-                                                  Mouth</title> (<ref rend="pending" target="https://read.84000.co/translation/toh646.html">Toh 
-                                                          646</ref>/<ref rend="pending" target="https://read.84000.co/translation/toh1080.html">1080)</ref>. 
+                                                  Mouth</title> (<ref target="https://read.84000.co/translation/toh646.html">Toh 
+                                                          646</ref>/<ref target="https://read.84000.co/translation/toh1080.html">1080)</ref>. 
                                                 These texts have had a significant
                                                 legacy for the ritual traditions of Buddhist Asia,
                                                 serving as foundations for the traditions of giving
@@ -286,13 +289,13 @@
                                                 in the Chinese Buddhist canon (Taishō 1314).</p>
                                         <milestone unit="chunk" xml:id="UT22084-091-044-8"/>
                                         <p tid="11">The sūtra narrates Ānanda’s<note place="end" xml:id="UT22084-091-044-208">In the
-                                                other text, <ref rend="pending" target="https://read.84000.co/translation/toh646.html">Toh 646</ref>/
-                                                <ref rend="pending" target="https://read.84000.co/translation/toh1080.html">1080</ref>,
+                                                other text, <ref target="https://read.84000.co/translation/toh646.html">Toh 646</ref>/
+                                                <ref target="https://read.84000.co/translation/toh1080.html">1080</ref>,
                                                 the main protagonist is Nanda, the Buddha’s half-brother, rather than Ānanda, his cousin and attendant.</note> 
                                                 nocturnal encounter with a gruesome female preta, or “hungry ghost,”
                                                 known by the epithet Flaming Mouth (Tib. <foreign xml:lang="Bo-Ltn">kha 
                                                         ’bar ma</foreign>),<note place="end" xml:id="UT22084-091-044-209">In the
-                                                                other text, <ref rend="pending" target="https://read.84000.co/translation/toh646.html">Toh 646</ref>/<ref rend="pending" target="https://read.84000.co/translation/toh1080.html">1080</ref>,
+                                                                other text, <ref target="https://read.84000.co/translation/toh646.html">Toh 646</ref>/<ref target="https://read.84000.co/translation/toh1080.html">1080</ref>,
                                                         the Tibetan rendering of the epithet is <foreign xml:lang="Bo-Ltn">kha nas me ’bar ba</foreign>,
                                                         and the preta is not specifically identified as female. Nevertheless (and disregarding 
                                                         this gender difference), both versions have a very similar 
@@ -489,7 +492,7 @@
                                                         (2016), vol. 1, p. 198 <foreign xml:lang="la">et passim</foreign>.</note>
                     </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-044-26"/>
-                                        <p tid="17">The dhāraṇī and the associated rite of
+                                        <p tid="53">The dhāraṇī and the associated rite of
                                                 compassionate appeasement for worldly spirits
                                                 described here, as well as a large number of 
                                                 liturgical arrangements incorporating the dhāraṇī formula
@@ -516,6 +519,15 @@
                                                         (<ptr target="#UT22084-091-044-224"/>) may possibly echo such notions. 
                                                 </note>
                     </p>
+                                        <milestone unit="chunk" xml:id="UT22084-091-044-226"/>
+                                        <p tid="54">The category of such practices in which the offering consists of water alone 
+                                                (Tib. <foreign xml:lang="Bo-Ltn">chu gtor</foreign>) may derive from the additional 
+                                                way of making offerings mentioned in the present text 
+                                                (see <ptr target="#UT22084-091-044-52"/>)—but
+                                                not in the other version, Toh 646/ 1080, even though the latter, with its greater detail 
+                                                in other respects, may represent a later and more 
+                                                elaborated form.</p>
+                                        <lb/>
                                         <milestone unit="chunk" xml:id="UT22084-091-044-28"/>
                                         <p tid="18">As far as we are aware, this is the first
                                                 translation of the Tibetan text into any European
@@ -702,7 +714,9 @@
                                                 always live the religious life, they will obtain the
                                                 roots of virtue of thus-gone ones as numerous as the
                                                 billions of grains of sand of the river Ganges, and
-                                                all their enemies will always be destroyed. </p>
+                                                all their enemies will always be 
+                                                destroyed.<note place="end" xml:id="UT22084-091-044-225">See 
+                                                        <ptr target="#UT22084-091-044-226"/>.</note> </p>
                                         <milestone unit="chunk" xml:id="UT22084-091-044-53"/>
                                         <p tid="40">“Recite the dhāraṇī twenty-one times over
                                                 flowers, incense, perfume, or food and drink, and
